Mantis 0002570 : Site en responsive design

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -38,7 +38,7 @@
 {% include 'SesileMainBundle:Default:flashbag.html.twig' %}
 <div id="maman">
 
-    <div id="gauche">
+    <div id="gauche" class="hidden-xs">
         <a href="{{ path('index') }}">
         <div id="logo">
                 <img src="{{ asset("/images/logos.svg") }}"/>
@@ -59,8 +59,31 @@
 
     <div id="droite">
 
+        <div class="navbar-toggle">
 
-        <div id="header">
+            <nav class="navbar navbar-fixed-top nav-mobile">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+
+                        <a class="navbar-brand" href="#"><img src="{{ asset("/images/logos.svg") }}" class="col-xs-2"/></a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        {% include 'SesileMainBundle:Default:menu-mobile.html.twig' %}
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+        <div id="header" class="hidden-xs">
 
             {% if app.user != null %}
                 <div class="btn-group">
@@ -114,10 +137,8 @@
                     {% endif %}
                     <div class="bloc_accueil">
                         {% if app.user %}
-                            <script type="application/javascript"
-                                    src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
-                            <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}"
-                                  rel="stylesheet"/>
+                            <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
+                            <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
 
                             {% render url("delegations_all_list") %}
                             <object id="winFirefoxPlugin" type="application/x-sharepoint" width="0" height="0"
