--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -140,3 +140,138 @@
     top: 1.429em;
     right: 0.8em;
 }
+
+/* Menu mobile */
+nav.nav-mobile {
+    background: white url("/images/vichy.png");
+    color: #ffffff;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+/*.nav-mobile .navbar-nav > li > a, .nav-mobile .dropdown-menu > li > a, .nav-mobile .navbar-nav .open .dropdown-menu > li > a {
+    color: #ffffff;
+}*/
+
+/* Toggle */
+.nav-mobile .navbar-toggle {
+    border-color: #dddddd;
+}
+.nav-mobile .navbar-toggle .icon-bar {
+     background-color: #cccccc;
+ }
+
+/* Delegations */
+.nav-mobile .navbar-nav > .dropdown-delegations > li,
+.nav-mobile .navbar-nav > .dropdown-delegations.open > li,
+.nav-mobile .navbar-nav > .dropdown-delegations.open .dropdown-menu > li,
+.nav-mobile .navbar-nav > .dropdown-delegations.open .dropdown-menu > li.active > a {
+    background-color: rgba(219, 162, 9, 0.7);
+    color: #ffffff;
+}
+.nav-mobile .navbar-nav > .dropdown-delegations > a:first-child,
+.nav-mobile .navbar-nav > .dropdown-delegations.open .dropdown-menu > li:hover,
+.nav-mobile .navbar-nav > .dropdown-delegations.open .dropdown-menu > li:hover.active,
+.nav-mobile .navbar-nav > .dropdown-delegations.open .dropdown-menu > li > a:hover {
+    background-color: rgba(219, 162, 9, 1);
+    color: #ffffff;
+}
+
+/* Classeurs */
+.nav-mobile .navbar-nav > .dropdown-classeurs > li,
+.nav-mobile .navbar-nav > .dropdown-classeurs.open > li,
+.nav-mobile .navbar-nav > .dropdown-classeurs.open .dropdown-menu > li,
+.nav-mobile .navbar-nav > .dropdown-classeurs.open .dropdown-menu > li.active > a {
+    background-color: rgba(50, 133, 171, 0.7);
+    color: #ffffff;
+}
+.nav-mobile .navbar-nav > .dropdown-classeurs > a:first-child,
+.nav-mobile .navbar-nav > .dropdown-classeurs.open .dropdown-menu > li:hover,
+.nav-mobile .navbar-nav > .dropdown-classeurs.open .dropdown-menu > li:hover.active,
+.nav-mobile .navbar-nav > .dropdown-classeurs.open .dropdown-menu > li > a:hover {
+    background-color: rgba(50, 133, 171, 1);
+    color: #ffffff;
+}
+
+/* Documentation */
+.nav-mobile .navbar-nav > .dropdown-documentations > li,
+.nav-mobile .navbar-nav > .dropdown-documentations.open > li,
+.nav-mobile .navbar-nav > .dropdown-documentations.open .dropdown-menu > li,
+.nav-mobile .navbar-nav > .dropdown-documentations.open .dropdown-menu > li.active > a {
+    background-color: rgba(219, 104, 18, 0.7);
+    color: #ffffff;
+}
+.nav-mobile .navbar-nav > .dropdown-documentations > a:first-child,
+.nav-mobile .navbar-nav > .dropdown-documentations.open .dropdown-menu > li:hover,
+.nav-mobile .navbar-nav > .dropdown-documentations.open .dropdown-menu > li:hover.active,
+.nav-mobile .navbar-nav > .dropdown-documentations.open .dropdown-menu > li > a:hover {
+    background-color: rgba(219, 104, 18, 1);
+    color: #ffffff;
+}
+
+/* Administration */
+.nav-mobile .navbar-nav > .dropdown-administration > li,
+.nav-mobile .navbar-nav > .dropdown-administration.open > li,
+.nav-mobile .navbar-nav > .dropdown-administration.open .dropdown-menu > li,
+.nav-mobile .navbar-nav > .dropdown-administration.open .dropdown-menu > li.active > a {
+    background-color: rgba(131, 177, 58, 0.7);
+    color: #ffffff;
+}
+.nav-mobile .navbar-nav > .dropdown-administration > a:first-child,
+.nav-mobile .navbar-nav > .dropdown-administration.open .dropdown-menu > li:hover,
+.nav-mobile .navbar-nav > .dropdown-administration.open .dropdown-menu > li:hover.active,
+.nav-mobile .navbar-nav > .dropdown-administration.open .dropdown-menu > li > a:hover {
+    background-color: rgba(131, 177, 58, 1);
+    color: #ffffff;
+}
+
+/* Compte user */
+.nav-mobile .navbar-nav > .dropdown-compte > li,
+.nav-mobile .navbar-nav > .dropdown-compte.open > li,
+.nav-mobile .navbar-nav > .dropdown-compte.open .dropdown-menu > li,
+.nav-mobile .navbar-nav > .dropdown-compte.open .dropdown-menu > li.active > a {
+    background-color: rgba(255, 255, 255, 0.7);
+    color: #333333;
+}
+
+.nav-mobile > .mobile-menu > .dropdown-compte.open > .dropdown-menu > li > a.toggle-compte,
+.nav-mobile .navbar-nav > .dropdown-compte > a:first-child,
+.nav-mobile .navbar-nav > .dropdown-compte .dropdown-menu > li,
+.nav-mobile .navbar-nav > .dropdown-compte.open .dropdown-menu > li:hover,
+.nav-mobile .navbar-nav > .dropdown-compte.open .dropdown-menu > li:hover.active,
+.nav-mobile .navbar-nav > .dropdown-compte.open .dropdown-menu > li > a:hover {
+    background-color: rgba(225, 225, 225, 1);
+    color: #333333;
+}
+
+.nav-mobile .dropdown-menu {
+    padding: 0;
+}
+
+/* Personnalisation des a dans les sous menu */
+.nav-mobile .navbar-nav > .dropdown-delegations.open .dropdown-menu > li > a ,
+.nav-mobile .navbar-nav > .dropdown-classeurs.open .dropdown-menu > li > a ,
+.nav-mobile .navbar-nav > .dropdown-documentations.open .dropdown-menu > li > a ,
+.nav-mobile .navbar-nav > .dropdown-administration.open .dropdown-menu > li > a {
+    color: #ffffff;
+}
+
+
+.nav-mobile .navbar-nav > .dropdown .caret {
+    float: right;
+}
+
+@media (max-width: 767px) {
+    #droite {
+        padding-top: 5em;
+    }
+    #lecontenu {
+        padding-bottom: 3em;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+    #lecontenu {
+        padding-bottom: 2em;
+    }
+}
