--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -13,42 +13,38 @@
 
         <form id="new_classeur" name="new_classeur" class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
             <div class="row">
-                <div class="col-lg-5">
-                    <div class="titre_form_element">
-                        <span class="glyphicon glyphicon-play"></span>
-                        &nbsp;&nbsp;&nbsp;Service organisationnel
+                <div class="col-lg-5 nopadding">
+                    <div class="col-lg-12">
+                        <div class="titre_form_element">
+                            <span class="glyphicon glyphicon-play"></span>
+                            &nbsp;&nbsp;&nbsp;Service organisationnel
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <select id="userGroupe" name="userGroupe" class="form-control" required="required">
+                            {% for userGroupe in userGroupes %}
+                                <option value="{{ userGroupe.id }}" data-id="{{ userGroupe.id }}" {#data-ordre="{{ userGroupe.ordre }}"#}>{{ userGroupe.name }}</option>
+                            {% endfor %}
+                        </select>
                     </div>
                 </div>
-                <div class="col-lg-5 col-lg-push-1">
-                    <div class="titre_form_element">
-                        <span class="glyphicon glyphicon-play"></span>
-                        &nbsp;&nbsp;&nbsp;Type de classeur
+
+                <div class="col-lg-5 nopadding">
+                    <div class="col-lg-12">
+                        <div class="titre_form_element">
+                            <span class="glyphicon glyphicon-play"></span>
+                            &nbsp;&nbsp;&nbsp;Type de classeur
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <select id="type" name="type" class="form-control" required="required"></select>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group">
 
-                        <div class="col-lg-5">
-                            <select id="userGroupe" name="userGroupe" class="form-control" required="required">
-                                {% for userGroupe in userGroupes %}
-                                    <option value="{{ userGroupe.id }}" data-id="{{ userGroupe.id }}" {#data-ordre="{{ userGroupe.ordre }}"#}>{{ userGroupe.name }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-
-                        <div class="col-lg-5 col-lg-push-1" id="testgroupe">
-                            <select id="type" name="type" class="form-control" required="required">
-                            </select>
-                        </div>
-
-                        <div class="col-lg-1 col-lg-push-1">
-                            <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
-                        </div>
-
-                    </div>
+                <div class="col-lg-1 col-lg-push-1">
+                    <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
                 </div>
+
             </div>
             <div id="contenttypedform"></div>
 
