--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -68,11 +68,15 @@
         </div>
         <br/>
 
-        <div class="label_form label-form-input">
+        {#<div class="label_form label-form-input">
             {{ form_label(edit_form.role) }}
             {{ form_widget(edit_form.role) }}
         </div>
-        <br/>
+        <br/>#}
+
+        <div class="">
+            {{ form_widget(edit_form.userRole) }}
+        </div>
 
         <div class="label_form label-form-input">
             {{ form_label(edit_form.qualite) }}
@@ -194,45 +198,80 @@
         $(document).ready(function() {
             // Personnalisation de l input file
             $(":file").filestyle({/*input: false, */buttonBefore: true, size: "sm", buttonText: "&nbsp;Télécharger une image", badge: false});
-        });
-        /*  $(".label_form input").focus(function () {
-            $(".glyphicon-search-blue").removeClass("glyphicon-search-blue");
-            $(this).prev("label").addClass("glyphicon-search-blue");
-        });
 
 
+            // Fonction permettant l ajout et la suppression de role multiple
+            // On récupère la balise <div> en question qui contient l'attribut « data-prototype » qui nous intéresse.
+            var $container = $('div#sesile_userbundle_user_userRole');
 
-         $(".cb-enable").click(function () {
-            var parent = $(this).parents('.acti');
-            $('.cb-disable', parent).removeClass('selected');
-            $(this).addClass('selected');
-            $('.checkbox', parent).attr('checked', true);
-        });
-        $(".cb-disable").click(function () {
-            var parent = $(this).parents('.acti');
-            $('.cb-enable', parent).removeClass('selected');
-            $(this).addClass('selected');
-            $('.checkbox', parent).attr('checked', false);
-        });
+            // On ajoute un lien pour ajouter une nouvelle catégorie
+            var $addLink = $('<a href="#" id="add_category" class="btn btn-default">Ajouter un rôle</a>');
 
-         */
-        /*  $('.acti').each(function () {
-            var checked = $('.checkbox', $(this)).is(':checked');
+            $container.prepend($addLink);
 
-            if (checked) {
 
-                $('.cb-disable', $(this)).removeClass('selected');
-                $('.cb-enable', $(this)).addClass('selected');
+            // On ajoute un nouveau champ à chaque clic sur le lien d'ajout.
+            $addLink.click(function(e) {
+                addCategory($container);
+                e.preventDefault(); // évite qu'un # apparaisse dans l'URL
+                return false;
+            });
 
-                // $('.cb-enable', $(this)).click();
+            // On définit un compteur unique pour nommer les champs qu'on va ajouter dynamiquement
+            var index = $container.find(':input').length / 2;
+            console.log('inex : ' + index);
+
+            // On ajoute un premier champ automatiquement s'il n'en existe pas déjà un (cas d'une nouvelle annonce par exemple).
+            if (index == 0) {
+                addCategory($container);
             } else {
-                $('.cb-enable', $(this)).removeClass('selected');
-                $('.cb-disable', $(this)).addClass('selected');
-
-                //$('.cb-disable', $(this)).click();
+                // Pour chaque catégorie déjà existante, on ajoute un lien de suppression
+                $container.children('div').each(function() {
+                    addDeleteLink($(this));
+                });
             }
+
+            // La fonction qui ajoute un formulaire Categorie
+            function addCategory($container) {
+                // Dans le contenu de l'attribut « data-prototype », on remplace :
+                // - le texte "__name__label__" qu'il contient par le label du champ
+                // - le texte "__name__" qu'il contient par le numéro du champ
+                var $prototype = $($container.attr('data-prototype').replace(/__name__label__/g, 'Rôle n°' + (index+1))
+                        .replace(/__name__/g, index));
+
+                // On ajoute au prototype un lien pour pouvoir supprimer la catégorie
+                addDeleteLink($prototype);
+
+                // On ajoute le prototype modifié à la fin de la balise <div>
+                $container.append($prototype);
+
+                // On modifie la valeur du select pour correspondre a l utilisateur courant
+                $("select#sesile_userbundle_user_userRole_" + index + "_user").val("{{ entity.id }}");
+                //$("select#sesile_userbundle_user_userRole_" + index + "_user").hide();
+
+                // Enfin, on incrémente le compteur pour que le prochain ajout se fasse avec un autre numéro
+                index++;
+            }
+
+            // La fonction qui ajoute un lien de suppression d'un role
+            function addDeleteLink($prototype) {
+                // Création du lien
+                $deleteLink = $('<a href="#" class="btn btn-danger btn-supRoles"><span class="glyphicon glyphicon-remove"></span></a>');
+
+                // Ajout du lien
+                $prototype.append($deleteLink);
+
+                // Ajout du listener sur le clic du lien
+                $deleteLink.click(function(e) {
+                    $prototype.remove();
+                    e.preventDefault(); // évite qu'un # apparaisse dans l'URL
+                    return false;
+                });
+            }
+
+
         });
-         */
+
         $("#sesile_userbundle_user_apiactivated").change(function (e) {
             if ($(this).is(':checked')) {
                 $('#apitokensecret').show('slow');
