--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -65,6 +65,14 @@
                             Liste des classeurs
                         </a>
                     </li>
+                    {% if is_granted('ROLE_SUPER_ADMIN') %}
+                        <li>
+                            <a href="{{ path("classeur_admin") }}">
+                                <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
+                                Liste de TOUS les classeurs
+                            </a>
+                        </li>
+                    {% endif %}
                     <li>
                         <a href="{{ path("index_retractables") }}">
                             <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
