--- a/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
@@ -35,7 +35,7 @@
                         <a href="{{ path("user_edit", {'id' : user.id }) }}" title="Editer l'utilisateur">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a class="" href="{{ path("user_edit", {'id' : user.id }) }}" title="Supprimer l'utilisateur">
+                        <a class="" href="{{ path("user_delete", {'id' : user.id }) }}" title="Supprimer l'utilisateur">
                             <span class="glyphicon glyphicon-trash"></span>
                         </a>
                     </td>
