Petite modification pour https

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -566,7 +566,7 @@
                 $(".perso_circuit").css("cursor", "-moz-grab");
                 {% endif %}
 
-                $(".btn-modifs, .btn-valider, .btn-refuser, .btn-valider-signer, .btn-valider-non-signer").click(function () {
+                $(".btn-modifs, .btn-valider, .btn-refuser, .btn-valider-signer, .btn-valider-non-signer, .btn-valider-signer-pdf").click(function () {
                     if($(this).hasClass("btn-modifs") || $(this).hasClass("btn-valider-signer") || $(this).hasClass("btn-valider-non-signer") || $(this).hasClass("btn-valider")) {
                         // ?? est ce nécessaire
                     }
