--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
@@ -64,6 +64,13 @@
                 &nbsp;Valider le classeur
             </button>
 
+            {% if signablePDF %}
+            <button type="submit" class="btn btn-success btn-valider-signer-pdf" data-action="{{ path('signPdfDocAction',{'id':classeur.id}) }}">
+                <span class="glyphicon glyphicon-ok"></span>
+                &nbsp;Valider et Signer PDF
+            </button>
+            {% endif %}
+
             {#<button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signform',{'id':classeur.id}) }}">
                 <span class="glyphicon glyphicon-ok"></span>
                 &nbsp;Valider et Signer
