--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
@@ -39,6 +39,13 @@
             &nbsp;Valider le classeur
         </button>
 
+        {% if signablePDF %}
+            <button type="submit" class="btn btn-success btn-valider-signer-pdf" data-action="{{ path('signPdfDocAction',{'id':classeur.id}) }}">
+                <span class="glyphicon glyphicon-ok"></span>
+                &nbsp;Valider et Signer PDF
+            </button>
+        {% endif %}
+
 
 
 
