--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -12,7 +12,7 @@
 
         <div class="label_form label-form-input">
             {{ form_label(edit_form.username) }}
-            {{ form_widget(edit_form.username) }}
+            {{ form_widget(edit_form.username, { 'attr':{'disabled':'disabled'} }) }}
         </div>
 
         <br/>
