Mantis 0002864: interdire la possibilité de modifier l'adresse mail dans le profil de l'utilisateur

--- a/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -16,7 +16,7 @@
 
 <div class="label_form label-form-input">
     {{ form_label(form.username, 'E-mail') }}
-    {{ form_widget(form.username) }}
+    {{ form_widget(form.username, { 'attr':{'disabled':'disabled'} }) }}
 </div>
 <br/>
 
