Mantis 0002653: Centrer en hauteur les libellés dans les tableaux

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -991,3 +991,9 @@ select [name=user] {
 	line-height: 1.8;
 	border-radius: 30px;
 }
+
+
+/* DataTable */
+#fulltable tr td, #validTable tr td {
+	vertical-align: middle;
+}
