--- a/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
@@ -69,8 +69,11 @@
             {{ form_label(form.role) }}
             {{ form_widget(form.role) }}
         </div>#}
-        <div>
-            {{ form_widget(form.userRole) }}
+
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-xs-6">
+                {{ form_widget(form.userRole) }}
+            </div>
         </div>
         <br/>
 
@@ -239,77 +242,8 @@
 
 
     <script src="{{ asset("/js/bootstrap-filestyle.min.js") }}" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            // Personnalisation de l input file
-            $(":file").filestyle({/*input: false, */buttonBefore: true, size: "sm", buttonText: "&nbsp;Télécharger une image", badge: false});
+    <script src="{{ asset("/js/user.js") }}" type="text/javascript"></script>
 
-            // Fonction permettant l ajout et la suppression de role multiple
-            // On récupère la balise <div> en question qui contient l'attribut « data-prototype » qui nous intéresse.
-            var $container = $('div#sesile_userbundle_user_userRole');
-
-            // On ajoute un lien pour ajouter une nouvelle catégorie
-            var $addLink = $('<a href="#" id="add_category" class="btn btn-default">Ajouter un rôle</a>');
-
-            $container.prepend($addLink);
-
-
-            // On ajoute un nouveau champ à chaque clic sur le lien d'ajout.
-            $addLink.click(function(e) {
-                addCategory($container);
-                e.preventDefault(); // évite qu'un # apparaisse dans l'URL
-                return false;
-            });
-
-            // On définit un compteur unique pour nommer les champs qu'on va ajouter dynamiquement
-            var index = $container.find(':input').length / 2;
-            console.log('inex : ' + index);
-
-            // On ajoute un premier champ automatiquement s'il n'en existe pas déjà un (cas d'une nouvelle annonce par exemple).
-            if (index == 0) {
-                addCategory($container);
-            } else {
-                // Pour chaque catégorie déjà existante, on ajoute un lien de suppression
-                $container.children('div').each(function() {
-                    addDeleteLink($(this));
-                });
-            }
-
-            // La fonction qui ajoute un formulaire Categorie
-            function addCategory($container) {
-                // Dans le contenu de l'attribut « data-prototype », on remplace :
-                // - le texte "__name__label__" qu'il contient par le label du champ
-                // - le texte "__name__" qu'il contient par le numéro du champ
-                var $prototype = $($container.attr('data-prototype').replace(/__name__label__/g, 'Rôle n°' + (index+1))
-                        .replace(/__name__/g, index));
-
-                // On ajoute au prototype un lien pour pouvoir supprimer la catégorie
-                addDeleteLink($prototype);
-
-                // On ajoute le prototype modifié à la fin de la balise <div>
-                $container.append($prototype);
-
-                // Enfin, on incrémente le compteur pour que le prochain ajout se fasse avec un autre numéro
-                index++;
-            }
-
-            // La fonction qui ajoute un lien de suppression d'un role
-            function addDeleteLink($prototype) {
-                // Création du lien
-                $deleteLink = $('<a href="#" class="btn btn-danger btn-supRoles"><span class="glyphicon glyphicon-remove"></span></a>');
-
-                // Ajout du lien
-                $prototype.append($deleteLink);
-
-                // Ajout du listener sur le clic du lien
-                $deleteLink.click(function(e) {
-                    $prototype.remove();
-                    e.preventDefault(); // évite qu'un # apparaisse dans l'URL
-                    return false;
-                });
-            }
-        });
-    </script>
 
 
     {% if is_granted('ROLE_SUPER_ADMIN') %}
