--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -79,7 +79,7 @@
         <br/>#}
 
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6 col-xs-6">
                 {{ form_widget(edit_form.userRole) }}
             </div>
         </div>
@@ -199,88 +199,9 @@
     </div>
 
     <script src="{{ asset("/js/bootstrap-filestyle.min.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("/js/user.js") }}" type="text/javascript"></script>
     <script type="text/javascript">
 
-        $(document).ready(function() {
-            // Personnalisation de l input file
-            $(":file").filestyle({/*input: false, */buttonBefore: true, size: "sm", buttonText: "&nbsp;Télécharger une image", badge: false});
-
-
-            // Fonction permettant l ajout et la suppression de role multiple
-            // On récupère la balise <div> en question qui contient l'attribut « data-prototype » qui nous intéresse.
-            var $container = $('div#sesile_userbundle_user_userRole');
-
-            // On ajoute un lien pour ajouter une nouvelle catégorie
-            var $addLink = $('<div class="row"><div class="col-md-3 col-md-push-7 text-center"> <a href="#" id="add_category" class="btn btn-circle-md btn-info first"><span class="glyphicon glyphicon-plus"></span></a> </div></div> <div class="row">&nbsp;</div>');
-
-//            $container.prepend($addLink);
-            $container.append($addLink);
-
-
-            // On ajoute un nouveau champ à chaque clic sur le lien d'ajout.
-            $addLink.click(function(e) {
-                addCategory($container);
-                e.preventDefault(); // évite qu'un # apparaisse dans l'URL
-                return false;
-            });
-
-            // On définit un compteur unique pour nommer les champs qu'on va ajouter dynamiquement
-            var index = $container.find(':input').length / 2;
-            //console.log('inex : ' + index);
-
-            // On ajoute un premier champ automatiquement s'il n'en existe pas déjà un (cas d'une nouvelle annonce par exemple).
-            if (index == 0) {
-                addCategory($container);
-            } else {
-                // Pour chaque catégorie déjà existante, on ajoute un lien de suppression
-                $container.children('div:not(.row)').each(function() {
-                    addDeleteLink($(this));
-                });
-            }
-
-            // La fonction qui ajoute un formulaire Categorie
-            function addCategory($container) {
-                // Dans le contenu de l'attribut « data-prototype », on remplace :
-                // - le texte "__name__label__" qu'il contient par le label du champ
-                // - le texte "__name__" qu'il contient par le numéro du champ
-                var $prototype = $($container.attr('data-prototype').replace(/__name__label__/g, 'Rôle n°' + (index+1))
-                        .replace(/__name__/g, index));
-
-                // On ajoute au prototype un lien pour pouvoir supprimer la catégorie
-                addDeleteLink($prototype);
-
-                // On ajoute le prototype modifié à la fin de la balise <div>
-                $container.append($prototype);
-
-                // On modifie la valeur du select pour correspondre a l utilisateur courant
-                $("select#sesile_userbundle_user_userRole_" + index + "_user").val("{{ entity.id }}");
-                //$("select#sesile_userbundle_user_userRole_" + index + "_user").hide();
-
-                // On ajoute le bouton d ajout de formulaire en fin
-                $container.append($addLink);
-
-                // Enfin, on incrémente le compteur pour que le prochain ajout se fasse avec un autre numéro
-                index++;
-            }
-
-            // La fonction qui ajoute un lien de suppression d'un role
-            function addDeleteLink($prototype) {
-                // Création du lien
-                $deleteLink = $('<a href="#" class="btn btn-circle-md btn-danger btn-supRoles"><span class="glyphicon glyphicon-remove"></span></a>');
-
-                // Ajout du lien
-                $prototype.append($deleteLink);
-
-                // Ajout du listener sur le clic du lien
-                $deleteLink.click(function(e) {
-                    $prototype.remove();
-                    e.preventDefault(); // évite qu'un # apparaisse dans l'URL
-                    return false;
-                });
-            }
-
-
-        });
 
         $("#sesile_userbundle_user_apiactivated").change(function (e) {
             if ($(this).is(':checked')) {
@@ -295,6 +216,10 @@
         } else {
             $('#apitokensecret').hide('slow');
         }
+
+        // Pour ne pas afficher l email car celui ci ne doit pas etre modifiable
+        $('#sesile_userbundle_user_username').attr('type', 'hidden');
+        $('.sesile_userbundle_user_username_label').hide();
 
 
     </script>
