Mantis 0002873: Enregistrement impossible du champ rôle utilisateur

--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -221,6 +221,11 @@
         $('#sesile_userbundle_user_username').attr('type', 'hidden');
         $('.sesile_userbundle_user_username_label').hide();
 
+        $(document).ready(function() {
+
+            setUserRole ({{ entity.id }});
+
+        });
 
     </script>
 {% endblock %}
