--- a/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
@@ -245,6 +245,12 @@
     <script src="{{ asset("/js/user.js") }}" type="text/javascript"></script>
 
 
+    <script>
+        $(document).ready(function() {
+
+            setUserRole ({{ entity.id }});
+        });
+    </script>
 
     {% if is_granted('ROLE_SUPER_ADMIN') %}
     <script type="text/javascript">
