Mantis 0002712 : impossible de mettre à jour les comptes SESILE

--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -78,9 +78,12 @@
         </div>
         <br/>#}
 
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-xs-6">
-                {{ form_widget(edit_form.userRole) }}
+        <div class="">
+
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-xs-6 label-form-input2">
+                    {{ form_widget(edit_form.userRole) }}
+                </div>
             </div>
         </div>
 
