Mantis 0002884: Page Gestion des collectivités le clique simple sur la ligne ne fonctionne pas

--- a/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
@@ -94,9 +94,9 @@
 	});
     </script>
     <script type="text/javascript">
-	/*$(".coll-row").click(function () {
+	$(".coll-row").click(function () {
 	    document.location.href = Routing.generate('edit_collectivite', { id: $(this).data("id") });
-	});*/
+	});
 
 	$('#deleteColl').on('show.bs.modal', function (event) {
 		console.log('coucou');
