--- a/src/Sesile/DocumentBundle/Resources/views/Document/visubord.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/visubord.html.twig
@@ -201,9 +201,13 @@
                         "sLast": ""
                     }
                 },
-                "sPaginationType": "full_numbers",
-                "iDisplayLength": 5,
-                "aLengthMenu": [5, 10, 20, 30, 50],
+                "paging":   false,
+                "ordering": false,
+                "info":     false,
+                /*"sPaginationType": "full_numbers",*/
+                /*"iDisplayLength": 5,*/
+                /*"aLengthMenu": [5, 10, 20, 30, 50],*/
+                "aLengthMenu": [[-1],["toutes"]],
                 "sDom": 'lft<"footer_datatables"ip>'
             });
 
